--- a/index.html
+++ b/index.html
@@ -2,132 +2,171 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>鉄道可視化</title>
+  <title>一畑電車 運行表示</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     body { font-family: sans-serif; }
-    .station-line { stroke: black; stroke-width: 2; fill: none; }
-    .station-circle { fill: white; stroke: black; stroke-width: 2; }
-    .station-label { font-size: 12px; text-anchor: middle; }
-    .train-label { font-size: 12px; fill: white; pointer-events: none; }
+    .station { font-size: 12px; text-anchor: middle; }
+    .line { stroke: black; stroke-width: 2; fill: none; }
+    .time-label { font-size: 20px; font-weight: bold; text-anchor: middle; }
+    .train-label { font-size: 12px; font-weight: bold; text-anchor: middle; dominant-baseline: middle; fill: white; }
   </style>
 </head>
 <body>
-  <h2>路線図</h2>
-  <svg id="map" width="900" height="600"></svg>
+  <svg id="map" width="1200" height="800"></svg>
   <div>現在時刻: <span id="current-time"></span></div>
 
   <script>
     const svg = d3.select("#map");
+    const width = +svg.attr("width");
+    const height = +svg.attr("height");
 
-    // CSV 読み込み
-    Promise.all([
-      d3.csv("stations.csv"), // 駅座標: name,x,y,order
-      d3.csv("trains.csv")    // 列車運行: train_id,train_name,direction,駅ごとのhhmm
-    ]).then(([stations, trains]) => {
-      stations.forEach(d => {
-        d.x = +d.x;
-        d.y = +d.y;
+    // 本線と支線の駅名リスト
+    const mainStations = [
+      "松江温泉","ガーデン前","朝日ヶ丘","長江","秋鹿町","フォーゲル","高ノ宮","津ノ森","伊野灘",
+      "一畑口","園","湖遊館新駅","布崎","雲州平田","旅伏","美談","大寺","川跡",
+      "武志","大津町","科学館前","電鉄出雲市"
+    ];
+    const branchStations = ["川跡","高浜","遥堪","浜山公園北口","出雲大社前"];
+
+    const stationSpacing = 40;
+
+    // 本線の座標
+    const mainCoords = mainStations.map((d,i)=>({name:d,x:100+i*stationSpacing,y:200}));
+
+    // 支線の座標（川跡から下に降りて平行）
+    const kawatoMain = mainCoords.find(s=>s.name==="川跡");
+    const branchCoords = branchStations.map((d,i)=>({
+      name:d,
+      x: kawatoMain.x + (i*stationSpacing),
+      y: kawatoMain.y+stationSpacing
+    }));
+    branchCoords[0].x = kawatoMain.x;
+
+    // 線を描画
+    svg.append("polyline")
+      .attr("points", mainCoords.map(d=>`${d.x},${d.y}`).join(" "))
+      .attr("class","line");
+    svg.append("polyline")
+      .attr("points", branchCoords.map(d=>`${d.x},${d.y}`).join(" "))
+      .attr("class","line");
+
+    // 駅を描画
+    svg.selectAll(".station.main")
+      .data(mainCoords).enter().append("circle")
+      .attr("cx",d=>d.x).attr("cy",d=>d.y).attr("r",5).attr("fill","black");
+    svg.selectAll(".station.branch")
+      .data(branchCoords).enter().append("circle")
+      .attr("cx",d=>d.x).attr("cy",d=>d.y).attr("r",5).attr("fill","black");
+
+    // 駅名ラベル
+    svg.selectAll(".station-label.main")
+      .data(mainCoords).enter().append("text")
+      .attr("x",d=>d.x).attr("y",d=>d.y-10)
+      .text(d=>d.name).attr("class","station");
+    svg.selectAll(".station-label.branch")
+      .data(branchCoords).enter().append("text")
+      .attr("x",d=>d.x).attr("y",d=>d.y+20)
+      .text(d=>d.name).attr("class","station");
+
+    // hhmm → 分
+    function parseTime(val) {
+      if (!val || isNaN(val)) return null;
+      const num = parseInt(val);
+      const hh = Math.floor(num/100);
+      const mm = num % 100;
+      return hh*60+mm;
+    }
+
+    // 現在時刻をラベル表示
+    const timeLabel = svg.append("text")
+      .attr("x",width/2).attr("y",50)
+      .attr("class","time-label");
+
+    function updateClock() {
+      const now = new Date();
+      document.getElementById("current-time").textContent =
+        now.toLocaleTimeString("ja-JP",{hour12:false});
+      timeLabel.text(d3.timeFormat("%H:%M:%S")(now));
+    }
+    setInterval(updateClock,1000);
+    updateClock();
+
+    // 座標表
+    const coords = {};
+    [...mainCoords,...branchCoords].forEach(d=>coords[d.name]=d);
+
+    // 列車読み込み
+    d3.csv("trains.csv").then(data=>{
+      const trains = data.map(row=>{
+        const schedule = {};
+        Object.keys(row).forEach(k=>{
+          if (k!=="train_id" && k!=="train_name" && k!=="direction") {
+            schedule[k] = parseTime(row[k]);
+          }
+        });
+        return {
+          id: row.train_id,
+          name: row.train_name,
+          dir: row.direction,
+          schedule: schedule
+        };
       });
 
-      // 路線描画
-      svg.append("path")
-        .datum(stations.sort((a,b)=>+a.order - +b.order))
-        .attr("d", d3.line()
-          .x(d => d.x)
-          .y(d => d.y))
-        .attr("class", "station-line");
+      // 列車描画グループ
+      const trainElems = svg.selectAll(".train")
+        .data(trains).enter()
+        .append("g")
+        .attr("class","train")
+        .attr("transform","translate(-100,-100)");
 
-      // 駅描画
-      stations.forEach(s => {
-        svg.append("circle")
-          .attr("cx", s.x).attr("cy", s.y)
-          .attr("r", 6).attr("class", "station-circle");
+      // 本体（四角＋とがり）
+      trainElems.append("rect")
+        .attr("x",-20).attr("y",-10)
+        .attr("width",40).attr("height",20)
+        .attr("fill","blue");
+      trainElems.append("polygon")
+        .attr("points","20,-10 30,0 20,10")
+        .attr("fill","blue");
 
-        svg.append("text")
-          .attr("x", s.x).attr("y", s.y - 10)
-          .attr("class", "station-label")
-          .text(s.name);
-      });
+      // 列車名
+      trainElems.append("text")
+        .attr("class","train-label")
+        .attr("x",0).attr("y",0)
+        .text(d=>d.name);
 
-      // hhmm → 分に変換
-      function hhmmToMinutes(t) {
-        if (!t) return null;
-        const hh = Math.floor(+t / 100);
-        const mm = +t % 100;
-        return hh * 60 + mm;
-      }
-
-      // 列車描画関数
-      function drawTrains() {
-        svg.selectAll(".train").remove();
-
+      // 更新ループ
+      setInterval(()=>{
         const now = new Date();
-        const currentMinutes = now.getHours() * 60 + now.getMinutes();
+        const nowM = now.getHours()*60+now.getMinutes()+now.getSeconds()/60;
 
-        trains.forEach(t => {
-          const times = [];
-          stations.forEach(s => {
-            if (t[s.name]) {
-              times.push({station: s, time: hhmmToMinutes(t[s.name])});
-            }
-          });
+        trains.forEach((train,i)=>{
+          const stops = Object.entries(train.schedule).filter(([st,t])=>t!=null);
+          stops.sort((a,b)=>a[1]-b[1]);
 
-          // 区間を探す
-          for (let i = 0; i < times.length - 1; i++) {
-            const t1 = times[i], t2 = times[i+1];
-            if (t1.time && t2.time && t1.time <= currentMinutes && currentMinutes <= t2.time) {
-              const ratio = (currentMinutes - t1.time) / (t2.time - t1.time);
-              const x = t1.station.x + (t2.station.x - t1.station.x) * ratio;
-              const y = t1.station.y + (t2.station.y - t1.station.y) * ratio;
-
-              const name = t.train_name;
-              const dir = t.direction;
-              const g = svg.append("g").attr("class", "train");
-
-              const textLength = name.length * 12;
-              const height = 20;
-
-              g.append("rect")
-                .attr("x", x).attr("y", y - height / 2)
-                .attr("width", textLength).attr("height", height)
-                .attr("fill", "blue");
-
-              if (dir === "down") {
-                g.append("polygon")
-                  .attr("points", `${x+textLength},${y-height/2} ${x+textLength+10},${y} ${x+textLength},${y+height/2}`)
-                  .attr("fill", "blue");
-              } else {
-                g.append("polygon")
-                  .attr("points", `${x},${y-height/2} ${x-10},${y} ${x},${y+height/2}`)
-                  .attr("fill", "blue");
-              }
-
-              g.append("text")
-                .attr("x", x + textLength/2)
-                .attr("y", y + 4)
-                .attr("text-anchor", "middle")
-                .attr("class", "train-label")
-                .text(name);
-
+          let pos=null;
+          for (let j=0;j<stops.length-1;j++){
+            const [s1,t1]=stops[j];
+            const [s2,t2]=stops[j+1];
+            if (nowM>=t1 && nowM<=t2){
+              const p=(nowM-t1)/(t2-t1);
+              const c1=coords[s1],c2=coords[s2];
+              const x=c1.x+(c2.x-c1.x)*p;
+              const y=c1.y+(c2.y-c1.y)*p;
+              pos={x,y};
               break;
             }
           }
+          if (pos){
+            trainElems.filter((d,idx)=>idx===i)
+              .attr("transform",`translate(${pos.x},${pos.y})`);
+          } else {
+            trainElems.filter((d,idx)=>idx===i)
+              .attr("transform","translate(-100,-100)");
+          }
         });
-      }
-
-      drawTrains();
-      setInterval(drawTrains, 30000); // 30秒ごと更新
+      },1000);
     });
-
-    // 時刻表示
-    function updateTime() {
-      const now = new Date();
-      document.getElementById("current-time").textContent =
-        now.toLocaleTimeString("ja-JP", { hour12: false });
-    }
-    setInterval(updateTime, 1000);
-    updateTime();
   </script>
 </body>
 </html>
