--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     .station { font-size: 12px; text-anchor: middle; }
     .line { stroke: black; stroke-width: 2; fill: none; }
     .time-label { font-size: 20px; font-weight: bold; text-anchor: middle; }
-    .train-label { font-size: 12px; font-weight: bold; text-anchor: middle; dominant-baseline: middle; fill: white; }
+    .train text { font-size: 10px; font-weight: bold; text-anchor: middle; dominant-baseline: middle; }
   </style>
 </head>
 <body>
   <svg id="map" width="1200" height="800"></svg>
-  <div>現在時刻: <span id="current-time"></span></div>
 
   <script>
     const svg = d3.select("#map");
     const width = +svg.attr("width");
     const height = +svg.attr("height");
 
-    // 本線と支線の駅名リスト
+    // 本線と支線の駅
     const mainStations = [
       "松江温泉","ガーデン前","朝日ヶ丘","長江","秋鹿町","フォーゲル","高ノ宮","津ノ森","伊野灘",
       "一畑口","園","湖遊館新駅","布崎","雲州平田","旅伏","美談","大寺","川跡",
@@ -29,17 +28,16 @@
     ];
     const branchStations = ["川跡","高浜","遥堪","浜山公園北口","出雲大社前"];
 
-    const stationSpacing = 40;
+    const stationSpacing = 40;  // 駅間隔
 
-    // 本線の座標
+    // 本線座標
     const mainCoords = mainStations.map((d,i)=>({name:d,x:100+i*stationSpacing,y:200}));
-
-    // 支線の座標（川跡から下に降りて平行）
+    // 支線座標
     const kawatoMain = mainCoords.find(s=>s.name==="川跡");
     const branchCoords = branchStations.map((d,i)=>({
       name:d,
       x: kawatoMain.x + (i*stationSpacing),
-      y: kawatoMain.y+stationSpacing
+      y: i===0 ? kawatoMain.y+stationSpacing : kawatoMain.y+stationSpacing+50
     }));
     branchCoords[0].x = kawatoMain.x;
 
@@ -69,7 +67,7 @@
       .attr("x",d=>d.x).attr("y",d=>d.y+20)
       .text(d=>d.name).attr("class","station");
 
-    // hhmm → 分
+    // 時刻を分に変換
     function parseTime(val) {
       if (!val || isNaN(val)) return null;
       const num = parseInt(val);
@@ -78,23 +76,24 @@
       return hh*60+mm;
     }
 
-    // 現在時刻をラベル表示
+    // 列車の色と文字色
+    function getTrainStyle(name) {
+      if (name.includes("A")) return {fill: "red", text: "white"};
+      if (name.includes("B")) return {fill: "green", text: "white"};
+      if (name.includes("C")) return {fill: "yellow", text: "black"};
+      if (name.includes("D")) return {fill: "blue", text: "black"};
+      if (name.includes("E")) return {fill: "none", text: "black"};
+      if (name.includes("F")) return {fill: "cyan", text: "black"};
+      if (name.includes("G")) return {fill: "orange", text: "white"};
+      if (name.includes("H")) return {fill: "pink", text: "black"};
+      if (name.includes("I")) return {fill: "lime", text: "black"};
+      return {fill: "gray", text: "white"};
+    }
+
+    // 現在時刻表示
     const timeLabel = svg.append("text")
       .attr("x",width/2).attr("y",50)
       .attr("class","time-label");
-
-    function updateClock() {
-      const now = new Date();
-      document.getElementById("current-time").textContent =
-        now.toLocaleTimeString("ja-JP",{hour12:false});
-      timeLabel.text(d3.timeFormat("%H:%M:%S")(now));
-    }
-    setInterval(updateClock,1000);
-    updateClock();
-
-    // 座標表
-    const coords = {};
-    [...mainCoords,...branchCoords].forEach(d=>coords[d.name]=d);
 
     // 列車読み込み
     d3.csv("trains.csv").then(data=>{
@@ -113,32 +112,38 @@
         };
       });
 
-      // 列車描画グループ
+      // 列車アイコン
       const trainElems = svg.selectAll(".train")
         .data(trains).enter()
         .append("g")
         .attr("class","train")
         .attr("transform","translate(-100,-100)");
 
-      // 本体（四角＋とがり）
-      trainElems.append("rect")
-        .attr("x",-20).attr("y",-10)
-        .attr("width",40).attr("height",20)
-        .attr("fill","blue");
-      trainElems.append("polygon")
-        .attr("points","20,-10 30,0 20,10")
-        .attr("fill","blue");
-
-      // 列車名
-      trainElems.append("text")
-        .attr("class","train-label")
+      // テキスト
+      const labels = trainElems.append("text")
         .attr("x",0).attr("y",0)
-        .text(d=>d.name);
+        .text(d=>d.name)
+        .attr("fill",d=>getTrainStyle(d.name).text);
+
+      // 枠 (テキストに合わせる)
+      trainElems.insert("rect","text")
+        .attr("x",d=>-labels.nodes()[trains.indexOf(d)].getBBox().width/2-4)
+        .attr("y",-8)
+        .attr("width",d=>labels.nodes()[trains.indexOf(d)].getBBox().width+8)
+        .attr("height",16)
+        .attr("rx",2).attr("ry",2)
+        .attr("fill",d=>getTrainStyle(d.name).fill)
+        .attr("stroke","black");
+
+      // 駅座標辞書
+      const coords = {};
+      [...mainCoords,...branchCoords].forEach(d=>coords[d.name]=d);
 
       // 更新ループ
       setInterval(()=>{
         const now = new Date();
         const nowM = now.getHours()*60+now.getMinutes()+now.getSeconds()/60;
+        timeLabel.text(d3.timeFormat("%H:%M:%S")(now));
 
         trains.forEach((train,i)=>{
           const stops = Object.entries(train.schedule).filter(([st,t])=>t!=null);
@@ -152,7 +157,7 @@
               const p=(nowM-t1)/(t2-t1);
               const c1=coords[s1],c2=coords[s2];
               const x=c1.x+(c2.x-c1.x)*p;
-              const y=c1.y+(c2.y-c1.y)*p;
+              const y=c1.y+(c2.y-c1.y)*p + (train.dir==="up" ? -15 : 15); // 上下分離
               pos={x,y};
               break;
             }
