--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
             return `-${w/2},-${h/2} ${w/2-5},-${h/2} ${w/2},0 ${w/2-5},${h/2} -${w/2},${h/2}`;
           } else {
             // 左向き矢印
-            return `-${w/2},-${h/2} ${w/2+5},-${h/2} ${w/2},0 ${w/2+5},${h/2} -${w/2},${h/2}`;
+            return `${w/2},-${h/2} -${w/2+5},-${h/2} -${w/2},0 -${w/2+5},${h/2} ${w/2},${h/2}`;
+
           }
         })
         .attr("fill",d=>getTrainStyle(d.name).fill)
@@ -182,4 +183,5 @@
   </script>
 </body>
 </html>
+
 
